--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -18,6 +18,9 @@
   .nav-link-text {
     color: black;
   }
-  .nav-nar{
-    color:blue;
+  .site-title {
+    font-size: 3rem;
+    color: gray;
+    font-weight: 700;
+    margin: 3rem 0;
   }
